# cognitive

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  gitlab-ci.yml  package.json
backend/: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.py  testdata.json
backend/api/dependecies/: security.py
backend/api/routers/: client.py  manager.py
backend/cognitive/: asgi.py  settings.py  urls.py  wsgi.py
backend/cognitive/api/v1/: exceptions.py  pagination.py  permissions.py  viewsets.py
backend/cognitive/api/v1/serializers/: organization.py  transaction.py  user.py
backend/cognitive/api/v1/views/: organization.py  statistic.py  transaction.py  user.py
backend/cognitive/apps/core/: managers.py  models.py  utils.py
backend/cognitive/apps/organization/: factory.py  models.py  tests.py
backend/cognitive/apps/organization/migrations/: 0001_initial.py  0002_organizationapikey.py  0003_alter_organizationapikey_options.py  0004_organization_status.py  0005_alter_organization_hashed_key.py  0006_alter_organization_hashed_key.py  0007_organization_count.py  (+3 more)
backend/cognitive/apps/transaction/: models.py
backend/cognitive/apps/user/: exceptions.py  factory.py  models.py  tests.py
backend/cognitive/settings/: __init__.py  settings.py
backend/core/: config.py  logger.py
backend/models/: client.py  manager.py
backend/schemas/: auth.py  client.py  manager.py
backend/tests/: test_client.py
config/: Dockerfile
(+183 files in other folders)
